--- a/listaTarefas/style.css
+++ b/listaTarefas/style.css
@@ -1,79 +1,99 @@
-body{
-    font-family: Arial, sans-serif;
+body {
+    font-family: Arial, Arial, Helvetica, sans-serif;
     background-color: #f0f0f0;
     margin: 0;
-    padding: 0;
+    padding: 20;
 
 }
-.container{
-    width: 80%;
+.container {
+    max-width: 600px;
     margin: 0 auto;
-    overflow: hidden;
+    background-color: #f0f0f0;
+    padding: 20px;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
-h1{
+h1 {
     text-align: center;
-    margin-top: 50px;
-    color: #333;
+    color: #e9e9ff;
 }
-#tarefas{
-    margin-top: 20px;
+task-form {
+    display: flex;
+    margin-bottom: 20px;
+}   
+task-input {
+    flex-grow: 1;
+    padding: 10px;  
+    font-size: 16px;
+    border: none;
+    border-radius: 5px 0 0 5px;
+
 }
-#tarefas ul{
+button {
+    padding: 10px 20px;
+    background-color: #9900ff;
+    color: #fff;
+    font-size: 16px;
+    cursor: pointer;
+    border: none   ;
+    border-radius: 0 5px 5px 0;
+}
+button:hover {
+    background-color: #6600cc;
+}
+ul {
     list-style: none;
     padding: 0;
 }
-#tarefas ul li{
-    background: #f4f4f4;
-    margin: 10px 0;
+form input[type="text"] {
+    flex-grow: 1;
     padding: 10px;
-    border-radius: 5px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 5px 0 0 5px;
 }
-#tarefas ul li:hover{
-    background: #f0f0f0;
-}
-#tarefas ul li span{
-    color: #333;
-    font-size: 18px;
-}
-#tarefas ul li a{
+form button {
+    padding: 10px 20px;
+    background-color: #9900ff;
     color: #fff;
-    background: #333;
+    font-size: 16px;
+    cursor: pointer;
+    border: 1px solid #007bff;
+    border-radius: 0 5px 5px 0;
+}
+ul {
+    list-style: none;
+    padding: 0;
+}
+li {
+    background-color: #d4b0e2;
+    padding: 10px;
+    margin-bottom: 10px;
+    border-radius: 5px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border-bottom: 1px solid #f0f0f0;
+}
+delete-btn {
+    background-color: #ff0000;
+    color: white;
+    border: none;
     padding: 5px 10px;
-    border-radius: 5px;
-    text-decoration: none;
-    float: right;
-}
-#tarefas ul li a:hover{
-    background: #555;
-}
-#tarefas form{
-    margin-top: 20px;
-}
-#tarefas form input[type="text"]{
-    width: 70%;
-    padding: 10px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-}
-#tarefas form input[type="submit"]{
-    padding: 10px;
-    border-radius: 5px;
-    border: 1px solid #ccc;
-    background: #333;
-    color: #fff;
     cursor: pointer;
-}
-#tarefas form input[type="submit"]:hover{
-    background: #555;
-}
-button{
-    padding: 10px;
     border-radius: 5px;
-    border: 1px solid #ccc;
-    background: #333;
-    color: #fff;
+    font-size: 10px;
+
+    text-decoration: line-through;
+}   
+edit-btn{
+    background-color: #0044ff;
+    color: white;
+    border: none;
+    padding: 5px 10px;
     cursor: pointer;
-}
-button:hover{
-    background: #555;
+    border-radius: 5px;
+    font-size: 10px;
+
+    text-decoration: line-through;   
 }
